// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should show coordinates and empty sign 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-12sve5v{border-width:1px;border-style:solid;border-color:#000000;text-align:center;background-color:#ffffff;color:#00008b;height:20px;width:20px;}",
      }
    }
    data-emotion="css 12sve5v"
  />,
  <td
    className="css-12sve5v"
    id="id3-4"
    onClick={[Function]}
  >
     
  </td>,
]
`;

exports[`Cell should show coordinates and filled up sign 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1rdrs4s{border-width:1px;border-style:solid;border-color:#000000;text-align:center;background-color:#00008b;color:#ffffff;height:20px;width:20px;}",
      }
    }
    data-emotion="css 1rdrs4s"
  />,
  <td
    className="css-1rdrs4s"
    id="id3-4"
    onClick={[Function]}
  >
    X
  </td>,
]
`;
